--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
 
         <p class="outro">
-            With all my love, always.
+            With all my love, </br> Kay ❤️‍🔥
         </p>
     </div>
 
