--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <div class="content-container">
         <h1>
-            <span>F</span><span>o</span><span>r</span><span>&nbsp;</span><span>M</span><span>y</span><span>&nbsp;</span><span>A</span><span>m</span><span>a</span><span>z</span><span>i</span><span>n</span><span>g</span><span>&nbsp;</span><span class="praise-name">P</span><span class="praise-name">r</span><span class="praise-name">a</span><span class="praise-name">i</span><span class="praise-name">s</span><span class="praise-name">e</span>
+            <span>F</span><span>o</span><span>r</span><span>&nbsp;</span><span>M</span><span>y</span><span>&nbsp;</span><span>A</span><span>m</span><span>a</span><span>z</span><span>i</span><span>n</span><span>g</span><span>&nbsp;</span><span class="praise-name">T</span><span class="praise-name">B</span><span class="praise-name">D</span>
+            
+            <!-- <span class="praise-name">i</span><span class="praise-name">s</span><span class="praise-name">e</span>
+            --> <!-- this is for the rest of the names -->
+            
         </h1>
 
         <p class="intro">
